nfs-client/jyjt-app-stable/ingress-nginx/meet-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: meet-ingress
  namespace: app-prod
  annotations: 
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-body-size: "600m"
spec:
  tls:
  - hosts:
    - meet.juneyaokc.com
    secretName: juneyaokc-nginx-secret
  rules:
  - host: "meet.juneyaokc.com"
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: meet-clusterip
            port:
              number: 8085
