nfs-client/jyjt-app-stable/ingress-nginx/web-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-ingress
  namespace: app-prod
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-body-size: "600m"
spec:
  tls:
  - hosts:
    - web.juneyaokc.com
    secretName: juneyaokc-nginx-secret
  rules:
  - host: "web.juneyaokc.com"
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: web-clusterip
            port:
              number: 8082
